Format code and add pub method.
