# main.go
@@ -1,47 +1,56 @@
 package main
 
 import (
-    "os"
-    "log"
-    "net/http"
-    "github.com/gin-gonic/gin"
-    "github.com/IBM/sarama"
-    gs "github.com/swaggo/gin-swagger"
-    sf "github.com/swaggo/files"
-    "github.com/xxm404/k-console/cmd"
-    docs "github.com/xxm404/k-console/docs"
+	"github.com/IBM/sarama"
+	"github.com/gin-gonic/gin"
+	sf "github.com/swaggo/files"
+	gs "github.com/swaggo/gin-swagger"
+	"github.com/xxm404/k-console/cmd"
+	docs "github.com/xxm404/k-console/docs"
+	"log"
+	"net/http"
+	"os"
 )
 
 func main() {
-    kafkaString := os.Getenv("KAFKA_STRING")
-    config := sarama.NewConfig()
-    admin, err := sarama.NewClusterAdmin([]string{kafkaString}, config)
-    if err != nil {
-        log.Fatal("Failed to connect to Kafka admin ", err)
-    }
-    client, err := sarama.NewClient([]string{kafkaString}, config)
-    if err != nil {
-        log.Fatal("Failed to connect to Kafka client ", err)
-    }
-    defer admin.Close()
-    defer client.Close()
+	kafkaString := os.Getenv("KAFKA_STRING")
+	config := sarama.NewConfig()
+	config.Producer.Return.Successes = true
+	config.Producer.RequiredAcks = sarama.WaitForAll
+	config.Producer.Retry.Max = 5
 
-    r := gin.Default()
-    r.GET("/ping", func(c *gin.Context) {
-        c.JSON(http.StatusOK, gin.H{
-            "message": "pong",
-        })
-    })
+	producer, err := sarama.NewSyncProducer([]string{kafkaString}, config)
+	if err != nil {
+		log.Fatal("Failed to start Sarama producer ", err)
+	}
 
-    docs.SwaggerInfo.BasePath = "/api/v1"
-    v1 := r.Group("/api/v1")
+	admin, err := sarama.NewClusterAdmin([]string{kafkaString}, config)
+	if err != nil {
+		log.Fatal("Failed to connect to Kafka admin ", err)
+	}
+	client, err := sarama.NewClient([]string{kafkaString}, config)
+	if err != nil {
+		log.Fatal("Failed to connect to Kafka client ", err)
+	}
+	defer admin.Close()
+	defer client.Close()
+	defer producer.Close()
 
-    v1.GET("/topics", cmd.ListTopic(admin))
-    v1.GET("/groups", cmd.ListGroups(admin))
-    v1.GET("/brokers", cmd.ListBrokers(client))
+	r := gin.Default()
+	r.GET("/ping", func(c *gin.Context) {
+		c.JSON(http.StatusOK, gin.H{
+			"message": "pong",
+		})
+	})
 
-    r.GET("/swagger/*any", gs.WrapHandler(sf.Handler))
-    r.Run(":7777")
+	docs.SwaggerInfo.BasePath = "/api/v1"
+	v1 := r.Group("/api/v1")
+
+	v1.GET("/topics", cmd.ListTopic(admin))
+	v1.GET("/groups", cmd.ListGroups(admin))
+	v1.GET("/brokers", cmd.ListBrokers(client))
+	v1.POST("/publish", cmd.PubToTopic(producer))
+
+	r.GET("/swagger/*any", gs.WrapHandler(sf.Handler))
+	r.Run(":7777")
 }
-
-
